--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -45,12 +45,18 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 2rem;
+  @media (max-width: 1200px) {
+    max-width: 83.3%;
+    min-width: 83.3%;
+  }
 }
 .content-container-nomargin {
   padding-top: 15rem;
   margin: 0 auto;
   bottom: 0;
   min-height: 100vh;
+  margin-bottom: 10rem;
 }
 .inline-link {
   text-decoration: none;
@@ -64,7 +70,7 @@ html {
   ##Screen = 1281px to higher resolution desktops
 */
 
-@media (min-width: 1281px) {
+@media (max-width: 1200px) {
   //CSS
 }
 
