--- a/src/styles/components/_blog-project-post.scss
+++ b/src/styles/components/_blog-project-post.scss
@@ -44,14 +44,15 @@
   letter-spacing: 1px;
   min-width: 75%;
   max-width: 75%;
+  @media (max-width: 1200px) {
+    max-width: 100%;
+    min-width: 100%;
+  }
   a {
     color: rgb(150, 150, 150);
     text-decoration: underline;
     &:hover {
       color: black;
-    }
-    .gatsby-resp-image-background-image {
-      // padding-bottom: calc(60vw / 1.77) !important;
     }
   }
   h1 {
@@ -114,22 +115,34 @@
     color: red;
   }
   .embedVideo-container {
-    //max-width: 100vw !important;
-    //margin: auto calc(-50vw + 50%) !important;
-    //max-height: 90vh !important;
-    width: 100%;
+    @media (max-width: 1200px) {
+      width: 100%;
+      padding-top: calc(100% / 1.77);
+      margin: auto calc(-50% + 50%) !important;
+    }
+    width: 120%;
+    padding-top: calc(120% / 1.77);
+    margin: auto calc(-60% + 50%) !important;
+
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
     iframe {
-      width: 60vw;
-      height: calc(60vw / 1.77);
-      margin: auto calc(-30vw + 50%) !important;
+      top: 0;
+      position: absolute;
+      width: 100%;
+      height: 100%;
     }
   }
 
   .gatsby-resp-image-link {
     //width: 100vw !important;
+    @media (max-width: 1500px) {
+      max-width: 82vw !important;
+      margin: auto calc(-41vw + 50%) !important;
+      max-height: calc(82vw / 1.77) !important;
+    }
     max-width: 60vw !important;
     margin: auto calc(-30vw + 50%) !important;
     object-fit: cover;
