--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,9 +4,8 @@
 @import "./components/header";
 @import "./components/footer";
 @import "./components/blog-project-post";
-@import "./components/home";
 @import "./components/contact";
 @import "./components/about";
 @import "./components/projectCard";
-@import "./components/blogCard";
 @import "./components/cv";
+@import "./hamburgers/hamburgers.scss";
