--- a/src/styles/components/_blog-project-post.scss
+++ b/src/styles/components/_blog-project-post.scss
@@ -11,6 +11,9 @@
   margin-top: 4rem;
   font-weight: 100;
   font-family: "BrandonGrotesque";
+  @media (max-width: 640px) {
+    font-size: 4.7rem;
+  }
 }
 .postDataWrap {
   color: black;
@@ -49,7 +52,18 @@
     min-width: 100%;
   }
   @media (max-width: 640px) {
-  p{font-size: 1.8rem !important;}
+    a {
+      font-size: 1.8rem !important;
+    }
+    p {
+      font-size: 1.8rem !important;
+    }
+    h1 {
+      font-size: 3.7rem !important;
+    }
+    h2 {
+      font-size: 2.2rem !important;
+    }
   }
   a {
     color: rgb(150, 150, 150);
@@ -81,7 +95,6 @@
     font-size: 0.5rem;
   }
   p {
-  
     font-size: 2rem;
     font-weight: 400;
   }
