--- a/src/styles/components/cv.scss
+++ b/src/styles/components/cv.scss
@@ -27,6 +27,9 @@
 .cvSection {
   display: flex;
   justify-content: space-between;
+  @media (max-width: 1030px) {
+    flex-direction: column;
+  }
 }
 
 .cvName {
@@ -36,9 +39,15 @@
 .cvColumn {
   width: 37%;
   margin-right: auto;
+  @media (max-width: 1030px) {
+    width: 80%;
+  }
 }
 .cvColumnRight {
   width: 50%;
+  @media (max-width: 1030px) {
+    width: 80%;
+  }
   margin-right: auto;
 }
 .cvItemsContainer {
@@ -67,6 +76,9 @@
 .cvDate {
   text-align: right;
   font-size: 1.3rem;
+  @media (max-width: 1030px) {
+    text-align: left;
+  }
 }
 
 .cvDetails {
@@ -75,6 +87,9 @@
 
 .cvColumns {
   display: flex;
+  @media (max-width: 1030px) {
+    flex-direction: column;
+  }
   justify-content: space-between;
   margin-bottom: 1rem;
 }
