--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -15,7 +15,7 @@
   }
   & > div[class$="Container"] > div {
     padding: 7rem 0 0rem 0;
-    max-width: $container;
+    max-width: 85vw;
     margin: 0 auto;
   }
   & > div[class$="Container"] {
@@ -242,11 +242,15 @@
   display: flex;
   flex-direction: row-reverse;
   justify-content: center;
+  align-items:center;
   height: 100%;
+  width:100%;
   & > div {
-    margin: auto;
-    padding: 0 6rem;
-    width: 50%;
+    margin:0  auto;
+    height:100%;
+    //min-width: 100%;
+
+    flex-basis: 100%;
   }
 }
 .editAboutContainer {
@@ -258,8 +262,22 @@
 .reactPlayer {
   margin: auto;
   position: relative;
+  top:0;
+  left:0;
 }
-
+.reactPlayerCover{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  
+  z-index: 99;
+}
+.reactPlayerWrap{
+  position:relative;
+  height: 100%;
+}
 .gameAboutContainer {
   background-color: #f4f5f9;
 }
