--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -97,6 +97,7 @@ $easeOutBack: cubic-bezier(0.175, 0.885, 0.32, 1.275);
   z-index: 11111111111111111111 !important;
   //background: rgba(0, 0, 0, 0.9) !important;
   margin-right: 8rem !important;
+  margin-left:8rem !important;
 }
 /* Position and sizing of burger button */
 .bm-burger-button {
