--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -145,6 +145,8 @@
   margin-bottom: 2rem;
 }
 .kofidonate {
+  position: relative;
+  z-index: 10;
   border: 0px;
   height: 36px;
   margin-bottom: 2rem;
