--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -210,11 +210,12 @@
 }
 .skillClose {
   position: absolute;
-  top: 0rem;
-  right: 0rem;
+  top: 2rem;
+  right: 2rem;
 }
 .skillTempBack {
   position: absolute;
+  border-radius: 2rem;
   background-color: white;
   width: 100%;
   height: 100%;
