--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -11,6 +11,9 @@
 }
 .contactHeader {
   position: relative;
+  @media (max-width: 460px) {
+    max-width: 80vw;
+  }
   z-index: 2;
   font-size: 6rem;
   width: 100%;
@@ -20,6 +23,12 @@
   background: $white-text;
 }
 .contactForm {
+  @media (max-width: 1030px) {
+    max-width: 70vw;
+  }
+  @media (max-width: 500px) {
+    max-width: 80vw;
+  }
   display: flex;
   flex-direction: column;
   max-width: 50vw;
@@ -95,6 +104,7 @@
   margin: auto;
   max-width: 50vw;
   margin-bottom: 2rem;
+  z-index: 10;
 }
 .spinnerWrap {
   opacity: 0;
@@ -146,7 +156,7 @@
 }
 .kofidonate {
   position: relative;
-  z-index: 10;
+  z-index: 3;
   border: 0px;
   height: 36px;
   margin-bottom: 2rem;
