--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -45,6 +45,9 @@ $easeOutBack: cubic-bezier(0.175, 0.885, 0.32, 1.275);
     @media (max-width: 1030px) {
       margin: 0 0 0 8rem;
     }
+    @media (max-width: 470px) {
+      margin: 0 0 0 2rem;
+    }
     text-decoration: none;
     font-size: $font-size-header;
     color: $white-text;
@@ -93,18 +96,21 @@ $easeOutBack: cubic-bezier(0.175, 0.885, 0.32, 1.275);
   background: rgba(0, 0, 0, 0.9) !important;
 }
 .headerBurger {
+  @media (max-width: 470px) {
+    margin: 0 2rem 0 0 !important;
+  }
   position: relative;
   z-index: 11111111111111111111 !important;
   //background: rgba(0, 0, 0, 0.9) !important;
   margin-right: 8rem !important;
-  margin-left:8rem !important;
+  margin-left: 8rem !important;
 }
 /* Position and sizing of burger button */
 .bm-burger-button {
   position: relative;
   width: 36px;
   height: 30px;
-  margin-right: 8rem !important;
+  margin-right: 2rem !important;
   z-index: 1111111111111111111 !important;
   background: black;
 }
