finished styling for mobile, redesigning footer and need to add page transitions

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -103,7 +103,7 @@
   width: 100vw;
   height: 100vh;
   z-index: -2;
-  position: fixed;
+  position: fixed !important;
 }
 .parallaxImageWrap {
   position: fixed;
