--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,3 +9,5 @@
 @import "./components/projectCard";
 @import "./components/cv";
 @import "./hamburgers/hamburgers.scss";
+@import "./components/404.scss";
+@import "./components/secret.scss";
