--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,7 +1,6 @@
 @font-face {
   font-family: "Raleway";
-  src: url("../fonts/raleway.eot"), /* IE6-IE8 */ url("../fonts/raleway.woff") format("woff"),
-    /* Pretty Modern Browsers */ url("../fonts/raleway.ttf") format("truetype"); /* Safari, Android, iOS */
+  src: url("../fonts/raleway.woff") format("woff");
 }
 
 @font-face {
@@ -117,4 +116,32 @@ html {
 
 @media (min-width: 320px) and (max-width: 480px) {
   //CSS
+}
+/*** Works on common browsers ***/
+::selection {
+  background-color: rgba(0, 0, 0, 0.9);
+  color: #fff;
+}
+
+/*** Mozilla based browsers ***/
+::-moz-selection {
+  background-color: rgba(0, 0, 0, 0.9);
+  color: #fff;
+}
+
+/***For Other Browsers ***/
+::-o-selection {
+  background-color: rgba(0, 0, 0, 0.9);
+  color: #fff;
+}
+
+::-ms-selection {
+  background-color: rgba(0, 0, 0, 0.9);
+  color: #fff;
+}
+
+/*** For Webkit ***/
+::-webkit-selection {
+  background-color: rgba(0, 0, 0, 0.9);
+  color: #fff;
 }
