i think i'm done but i'll add transitions later got some work to do now

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -5,6 +5,7 @@ $secondary-color: lighten(#cb0d83, 5%);
 $third-color: #3cd7c1;
 $fourth-color: #39d34f;
 $white-text: #fafafa;
+$back-white: #f4f5f9;
 
 // === Variables =====
 $perspective: 60rem;
